# so-called-smart-home

./: .gitignore  README.md  docker-compose.yml  prometheus-entrypoint.sh
.github/workflows/: deploy-web.yml
environment-sensor-firmware/: bme688_sensor.py
environment-sensor-monitor/: Pipfile  bme688_sensor.py  client.py  logger.py  main.py  util.py
homepage/: Dockerfile  package.json
homepage/components/: grid-item.tsx
homepage/data/: services.json
homepage/interfaces/: home.interfaces.tsx
homepage/styles/: Home.module.css
homepage/thornton-homepage/: Dockerfile  package.json
homepage/thornton-homepage/components/: grid-item.tsx
homepage/thornton-homepage/data/: services.json
homepage/thornton-homepage/interfaces/: home.interfaces.tsx
homepage/thornton-homepage/pages/: index.tsx
homepage/thornton-homepage/styles/: Home.module.css  globals.css
rusty-sensor-gateway/: Cargo.toml  README.md
rusty-sensor-gateway/src/: main.rs
sensor-gateway/: Dockerfile  Pipfile
sensor-gateway/src/: app.py  config.py
sensor-gateway/src/routers/: metrics_receiver.py
